WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81325
context-lost.html is failing
https://bugs.webkit.org/show_bug.cgi?id=81325
Summary
context-lost.html is failing
Hajime Morrita
Reported
2012-03-16 02:45:28 PDT
fast/canvas/webgl/context-lost.html started failing. The flakiness dashboard told me that the failure started around
r110911
. But I don't have any confident.
Attachments
Patch
(1.77 KB, patch)
2012-04-06 12:22 PDT
,
Kenneth Russell
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2012-03-26 14:19:01 PDT
gman@ recently noticed that there's a renderer process crash when running a few of the context lost WebGL conformance tests. Might be related.
Kenneth Russell
Comment 2
2012-04-06 12:22:38 PDT
Created
attachment 136051
[details]
Patch
James Robinson
Comment 3
2012-04-06 12:32:29 PDT
Comment on
attachment 136051
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136051&action=review
R=me, good catch.
> Source/WebCore/html/canvas/WebGLRenderingContext.cpp:4284 > + };
no ;
Kenneth Russell
Comment 4
2012-04-06 12:33:27 PDT
(In reply to
comment #3
)
> no ;
Oops.
Kenneth Russell
Comment 5
2012-04-06 12:43:44 PDT
Committed
r113481
: <
http://trac.webkit.org/changeset/113481
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug