context-lost.html is failing https://bugs.webkit.org/show_bug.cgi?id=81325

Reviewed by James Robinson.

Ensure that the DrawingBuffer does not attempt to restore the
TEXTURE_2D binding to an already-deleted texture.

Tested with layout test fast/canvas/webgl/context-lost.html as
well as WebGL conformance tests.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::loseContextImpl):

Canonical link: https://commits.webkit.org/100806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113481 268f45cc-cd09-0410-ab3c-d52691b4dbfc